--- a/src/server_manager/ui_components/outline-feedback-dialog.html
+++ b/src/server_manager/ui_components/outline-feedback-dialog.html
@@ -60,8 +60,8 @@ see https://github.com/PolymerElements/paper-swatch-picker/issues/36 -->
         margin: 0;
         font-size: 12px;
       }
-      paper-input, paper-textarea, paper-dropdown-menu {
-        --paper-input-container-focus-color: var(--primary-green);
+      paper-dropdown-menu {
+        width: 100%;
       }
       paper-textarea {
         --iron-autogrow-textarea: {
