--- a/src/server_manager/ui_components/cloud-install-styles.html
+++ b/src/server_manager/ui_components/cloud-install-styles.html
@@ -81,7 +81,13 @@ https://www.polymer-project.org/2.0/docs/devguide/style-shadow-dom#style-modules
       }
 
       paper-dropdown-menu {
-        width: 100%;
+        --paper-input-container-underline: {
+          color: var(--primary-green);
+        };
+      }
+
+      paper-input, paper-textarea, paper-dropdown-menu {
+        --paper-input-container-focus-color: var(--primary-green);
       }
 
       app-toolbar {
@@ -112,7 +118,6 @@ https://www.polymer-project.org/2.0/docs/devguide/style-shadow-dom#style-modules
         margin-bottom: 24px;
       }
 
-
       paper-dialog {
         max-width: 540px;
         min-width: 480px;
@@ -123,7 +128,6 @@ https://www.polymer-project.org/2.0/docs/devguide/style-shadow-dom#style-modules
         width: 100%;
         margin: 0;
       }
-
 
       paper-dialog-scrollable img{
         padding-top: 24px;
@@ -139,6 +143,13 @@ https://www.polymer-project.org/2.0/docs/devguide/style-shadow-dom#style-modules
       }
       paper-dialog .dialogBanner img {
         height: 150px;
+      }
+
+      paper-tooltip {
+        --paper-tooltip-text-color: #000;
+        --paper-tooltip-background: #FFF;
+        --paper-tooltip-duration-in: 100;
+        --paper-tooltip-duration-out: 100;
       }
 
       .instructions-list {
@@ -202,6 +213,7 @@ https://www.polymer-project.org/2.0/docs/devguide/style-shadow-dom#style-modules
 
       a {
         text-decoration: none;
+        color: var(--primary-green);
       }
 
       /*
