--- a/src/server_manager/ui_components/outline-server-settings.html
+++ b/src/server_manager/ui_components/outline-server-settings.html
@@ -127,13 +127,13 @@
             <paper-input id="serverNameInput" class="server-name" value="{{name}}" label="[[localize('settings-server-name')]]" always-float-label maxlength="100" on-keydown="_handleNameInputKeyDown" on-blur="_handleNameInputBlur"></paper-input>
             <p class="detail">[[localize('settings-server-rename')]]</p>
             <outline-validated-input
-              name="PortForNewAccessKeys" editable="[[isAccessKeyPortEditable]]" visible="[[serverPortForNewAccessKeys]]" label="[[localize('settings-access-key-port')]]" allowed-pattern="[0-9]{1,5}" max-length="5" value="[[serverPortForNewAccessKeys]]" client-side-validator="[[_keysPortValidator]]" client-side-validation-failure-message="[[localize('error-keys-port-bad-input')]]" event="ChangePortForNewAccessKeysRequested" localize="[[localize]]"
+              name="PortForNewAccessKeys" editable="[[isAccessKeyPortEditable]]" visible="[[serverPortForNewAccessKeys]]" label="[[localize('settings-access-key-port')]]" allowed-pattern="[0-9]{1,5}" max-length="5" value="[[serverPortForNewAccessKeys]]" client-side-validator="[[_keysPortValidator]]" event="ChangePortForNewAccessKeysRequested" localize="[[localize]]"
             ></outline-validated-input>
             <outline-validated-input
               name ="Hostname" editable="[[isHostnameEditable]]" visible="[[serverHostname]]" label="[[localize('settings-server-hostname')]]" max-length="253" value="[[serverHostname]]" event="ChangeHostnameForAccessKeysRequested" localize="[[localize]]"
             ></outline-validated-input>
             <paper-input readonly value="[[serverManagementApiUrl]]" label="[[localize('settings-server-api-url')]]" hidden$="[[!serverManagementApiUrl]]" always-float-label maxlength="100"></paper-input>
-            <paper-input readonly value="[[serverCreationDate]]" label="[[localize('settings-server-creation')]]" hidden$="[[! serverCreationDate]]" always-float-label maxlength="100"></paper-input>
+            <paper-input readonly value="[[serverCreationDate]]" label="[[localize('settings-server-creation')]]" hidden$="[[!serverCreationDate]]" always-float-label maxlength="100"></paper-input>
             <paper-input readonly value="[[serverId]]" label="[[localize('settings-server-id')]]" hidden$="[[!serverId]]" always-float-label maxlength="100"></paper-input>
           </div>
         </div>
@@ -211,7 +211,8 @@
       },
       _keysPortValidator: function(value) {
         const port = Number(value);
-        return !Number.isNaN(port) && port >= 1 && port <= 65535 && Number.isInteger(port)
+        const valid = !Number.isNaN(port) && port >= 1 && port <= 65535 && Number.isInteger(port);
+        return valid ? "" : this.localize("error-keys-port-bad-input");
       }  
     });
   </script>
