--- a/src/server_manager/ui_components/outline-server-settings.html
+++ b/src/server_manager/ui_components/outline-server-settings.html
@@ -63,38 +63,12 @@
         justify-content: space-between;
         align-items: flex-start;
       }
-      #portForNewAccessKeysContainer {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-      }
       .detail {
         margin-top: 0px;
         font-size: 12px;
       }
       .clickable {
         cursor: pointer;
-      }
-      #keysPortSaveButton {
-        background: var(--primary-green);
-        color: #fff;
-        height: 36px;
-        width: 83px;
-      }
-      #keysPortSaveButton[disabled] {
-        background-color: rgba(255, 255, 255, .12);
-        color: rgba(255, 255, 255, .3);
-      }
-      #keysPortCancelButton {
-        color: #fff;
-        width: 83px;
-      }
-      #keysPortCancelButton[disabled] {
-        color:rgba(255, 255, 255, 0.3);
-        background-color: rgba(0, 0, 0, 0);
-      }
-      #portForNewAccessKeysContainer {
-        max-width: 545px;
       }
       paper-checkbox {
         /* We want the ink to be the color we're going to, not coming from */
@@ -127,10 +101,10 @@
             <paper-input id="serverNameInput" class="server-name" value="{{name}}" label="[[localize('settings-server-name')]]" always-float-label maxlength="100" on-keydown="_handleNameInputKeyDown" on-blur="_handleNameInputBlur"></paper-input>
             <p class="detail">[[localize('settings-server-rename')]]</p>
             <outline-validated-input
-              name="PortForNewAccessKeys" editable="[[isAccessKeyPortEditable]]" visible="[[serverPortForNewAccessKeys]]" label="[[localize('settings-access-key-port')]]" allowed-pattern="[0-9]{1,5}" max-length="5" value="[[serverPortForNewAccessKeys]]" client-side-validator="[[_keysPortValidator]]" event="ChangePortForNewAccessKeysRequested" localize="[[localize]]"
+              editable="[[isAccessKeyPortEditable]]" visible="[[serverPortForNewAccessKeys]]" label="[[localize('settings-access-key-port')]]" allowed-pattern="[0-9]{1,5}" max-length="5" value="[[serverPortForNewAccessKeys]]" client-side-validator="[[_validate]]" event="ChangePortForNewAccessKeysRequested" localize="[[localize]]"
             ></outline-validated-input>
             <outline-validated-input
-              name ="Hostname" editable="[[isHostnameEditable]]" visible="[[serverHostname]]" label="[[localize('settings-server-hostname')]]" max-length="253" value="[[serverHostname]]" event="ChangeHostnameForAccessKeysRequested" localize="[[localize]]"
+              editable="[[isHostnameEditable]]" visible="[[serverHostname]]" label="[[localize('settings-server-hostname')]]" max-length="253" value="[[serverHostname]]" event="ChangeHostnameForAccessKeysRequested" localize="[[localize]]"
             ></outline-validated-input>
             <paper-input readonly value="[[serverManagementApiUrl]]" label="[[localize('settings-server-api-url')]]" hidden$="[[!serverManagementApiUrl]]" always-float-label maxlength="100"></paper-input>
             <paper-input readonly value="[[serverCreationDate]]" label="[[localize('settings-server-creation')]]" hidden$="[[!serverCreationDate]]" always-float-label maxlength="100"></paper-input>
@@ -209,7 +183,7 @@
           this.fire(metricsSignal);
         }
       },
-      _keysPortValidator: function(value) {
+      _validate: function(value) {
         const port = Number(value);
         const valid = !Number.isNaN(port) && port >= 1 && port <= 65535 && Number.isInteger(port);
         return valid ? "" : this.localize("error-keys-port-bad-input");
