--- a/src/server_manager/ui_components/outline-validated-input.html
+++ b/src/server_manager/ui_components/outline-validated-input.html
@@ -19,7 +19,6 @@
     event-based hook for server-side evaluation.
 
     Attributes:
-        * name: A unique name used to build element id's.  Default: null
         * editable: Is this input editable?  Default: false
         * visible: Is this input visible?  Default: false
         * label: The label for the input.  Default: null
@@ -42,48 +41,51 @@
         <style include='cloud-install-styles'></style>
         <style include='outline-server-settings-styles'></style>
         <style>
-            [id$=Container] {
+            #container {
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
                 max-width: 545px;
             }
 
-            [id$=SaveButton] {
+            paper-button {
+                height: 36px;
+                width: 83px;
+            }
+
+            paper-button[disabled] {
+                color: rgba(255, 255, 255, 0.3);
+            }
+
+            #saveButton {
                 background: var(--primary-green);
                 color: #fff;
-                height: 36px;
-                width: 83px;
             }
-
-            [id$=SaveButton][disabled] {
-                background-color: rgba(255, 255, 255, .12);
-                color: rgba(255, 255, 255, .3);
-            }
-
-            [id$=CancelButton] {
+            
+            #cancelButton {
                 color: #fff;
-                height: 36px;
-                width: 83px;
             }
 
-            [id$=CancelButton][disabled] {
-                color: rgba(255, 255, 255, 0.3);
+            #saveButton[disabled] {
+                background-color: rgba(255, 255, 255, .12);
+            }
+
+
+            #cancelButton[disabled] {
                 background-color: rgba(0, 0, 0, 0);
             }
         </style>
-        <div id="[[name]]Container" hidden$="[[!visible]]">
+        <div id="container" hidden$="[[!visible]]">
             <!-- We use on-focus instead of on-tap to handle the case where text is selected but the tap event isn't fired. -->
-            <paper-input id="[[name]]Input" readonly$="[[!editable]]" allowed-pattern="[[allowedPattern]]"
-                value="[[value]]" label="[[label]]" maxlength="[[maxLength]]" on-focus="_enterEditingState"
-                on-keyup="_onKeyUp" always-float-label>
+            <paper-input id="input" readonly$="[[!editable]]" allowed-pattern="[[allowedPattern]]" value="[[value]]"
+                label="[[label]]" maxlength="[[maxLength]]" on-focus="_enterEditingState" on-keyup="_onKeyUp"
+                always-float-label>
             </paper-input>
-            <paper-button id="[[name]]CancelButton" hidden$="[[!_showButtons]]" disabled$="[[!_enableButtons]]"
+            <paper-button id="cancelButton" hidden$="[[!_showButtons]]" disabled$="[[!_enableButtons]]"
                 on-tap="_cancel">
                 [[localize('cancel')]]
             </paper-button>
-            <paper-button id="[[name]]SaveButton" hidden$="[[!_showButtons]]" disabled$="[[!_enableButtons]]"
-                on-tap="_save">
+            <paper-button id="saveButton" hidden$="[[!_showButtons]]" disabled$="[[!_enableButtons]]" on-tap="_save">
                 [[localize('save')]]
             </paper-button>
         </div>
@@ -93,7 +95,6 @@
             is: 'outline-validated-input',
             properties: {
                 // Properties affecting the whole element
-                name: { type: String, readonly: true, value: null },
                 editable: { type: Boolean, value: false },
                 visible: { type: Boolean, value: false },
                 // Properties affecting the input
@@ -113,9 +114,8 @@
                 event: { type: String, value: null },
                 localize: { type: Function, readonly: true }
             },
-            _select: function (idSuffix) { return this.$$(`#${this.name}${idSuffix}`); },
             _onKeyUp: function (e) {
-                const input = this._select("Input");
+                const input = this.$.input;
                 if (e.key === 'Escape') {
                     this._cancel();
                     input.blur();
@@ -130,27 +130,28 @@
                 const validationError = this.clientSideValidator(input.value);
                 if (validationError) {
                     input.invalid = true;
-                    this._select("SaveButton").disabled = true;
+                    this.$.saveButton.disabled = true;
                     input.errorMessage = validationError;
                 } else {
                     input.invalid = false;
-                    this._select("SaveButton").disabled = false;
+                    this.$.saveButton.disabled = false;
                 }
             },
             _cancel: function () {
-                const input = this._select("Input");
+                const input = this.$.input;
                 input.value = this.value;
                 input.invalid = false;
                 this._showButtons = false;
             },
             _save: function () {
-                const input = this._select("Input");
+                const input = this.$.input;
                 const value = input.value;
                 if (value === this.value) {
                     this._cancel();
                     return;
                 };
-                this._enableButtons = false;
+                this.$.cancelButton.disabled = true;
+                this.$.saveButton.disabled = true;
                 input.readonly = true;
                 input.invalid = false;
 
@@ -159,7 +160,7 @@
                 const typedValue = Number.isNaN(numberValue) ? value : numberValue;
 
                 this.fire(this.event, {
-                    value: typedValue,
+                    validatedInput: typedValue,
                     ui: this
                 });
             },
@@ -168,17 +169,17 @@
                     return;
                 }
                 this._showButtons = true;
-                this._select("CancelButton").disabled = false;
-                this._select("SaveButton").disabled = this._select("Input").invalid;
+                this.$.cancelButton.disabled = false;
+                this.$.saveButton.disabled = this.$.input.invalid;
             },
             enterSavedState: function () {
-                const input = this._select("Input");
+                const input = this.$.input;
                 this.value = input.value;
                 this._showButtons = false;
                 input.readonly = false;
             },
             enterErrorState: function (message) {
-                const input = this._select("Input");
+                const input = this.$.input;
                 this._enableButtons = true;
                 input.errorMessage = message;
                 input.invalid = true;
