--- a/src/server_manager/ui_components/outline-validated-input.html
+++ b/src/server_manager/ui_components/outline-validated-input.html
@@ -51,6 +51,7 @@
             paper-button {
                 height: 36px;
                 width: 83px;
+                text-align:center
             }
 
             paper-button[disabled] {
@@ -61,7 +62,7 @@
                 background: var(--primary-green);
                 color: #fff;
             }
-            
+
             #cancelButton {
                 color: #fff;
             }
@@ -69,7 +70,6 @@
             #saveButton[disabled] {
                 background-color: rgba(255, 255, 255, .12);
             }
-
 
             #cancelButton[disabled] {
                 background-color: rgba(0, 0, 0, 0);
