--- a/src/server_manager/ui_components/outline-help-bubble.html
+++ b/src/server_manager/ui_components/outline-help-bubble.html
@@ -19,10 +19,14 @@
 
 <dom-module id='outline-help-bubble'>
   <template>
+    <style include='cloud-install-styles'></style>
     <style>
       :host {
         margin: 10px;
         z-index: 100;
+      }
+      paper-button {
+        color: var(--primary-green);
       }
       .helpContent {
         background-color: #FFF;
