--- a/src/server_manager/ui_components/outline-server-settings.html
+++ b/src/server_manager/ui_components/outline-server-settings.html
@@ -19,11 +19,14 @@
 <link rel='import' href='../bower_components/paper-checkbox/paper-checkbox.html'>
 
 <link rel='import' href='./cloud-install-styles.html'>
+<link rel='import' href='./outline-server-settings-styles.html'>
 <link rel='import' href='./outline-iconset.html'>
+<link rel='import' href='./outline-validated-input.html'>
 
 <dom-module id='outline-server-settings'>
   <template>
     <style include='cloud-install-styles'></style>
+    <style include='outline-server-settings-styles'></style>
     <style>
       .content {
         flex-grow: 1;
@@ -60,38 +63,12 @@
         justify-content: space-between;
         align-items: flex-start;
       }
-      #portForNewAccessKeysContainer {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-      }
       .detail {
         margin-top: 0px;
         font-size: 12px;
       }
       .clickable {
         cursor: pointer;
-      }
-      #keysPortSaveButton {
-        background: var(--primary-green);
-        color: #fff;
-        height: 36px;
-        width: 83px;
-      }
-      #keysPortSaveButton[disabled] {
-        background-color: rgba(255, 255, 255, .12);
-        color: rgba(255, 255, 255, .3);
-      }
-      #keysPortCancelButton {
-        color: #fff;
-        width: 83px;
-      }
-      #keysPortCancelButton[disabled] {
-        color:rgba(255, 255, 255, 0.3);
-        background-color: rgba(0, 0, 0, 0);
-      }
-      #portForNewAccessKeysContainer {
-        max-width: 545px;
       }
       paper-checkbox {
         /* We want the ink to be the color we're going to, not coming from */
@@ -100,51 +77,9 @@
         --paper-checkbox-unchecked-color: var(--light-gray);
         --paper-checkbox-unchecked-ink-color: var(--primary-green);
       }
-      /* Skip processing these with postcss-rtl as it incorrectly parses the border-color
-         in the paper-input-container-underline-focus mixin. https://github.com/vkalinichev/postcss-rtl/issues/50 */
-      /* rtl:begin:ignore */
-      paper-input {
-        /* Removes extra padding added by children of paper-input */
-        margin-top: -8px;
-        /* Create space for error messages */
-        margin-bottom: 14px;
-        --paper-input-container-label-focus: {
-          color: var(--primary-green);
-        };
-        --paper-input-container-underline-focus: {
-          border-color: var(--primary-green);
-        };
-        --paper-input-container-label: {
-          font-size: 14px;
-          line-height: 22px;
-        };
-        --paper-input-container-color: var(--medium-gray);
-        --paper-input-container-input: {
-          color: #fff;
-        };
-        --paper-input-container-invalid-color: #f28b82;
-      }
-      /* rtl:end:ignore */
-      paper-input[readonly] {
-        --paper-input-container-underline: {
-          display: none;
-        };
-        --paper-input-container-underline-focus: {
-          display: none;
-        };
-        --paper-input-container-underline-disabled: {
-          display: none;
-        };
-        --paper-input-container-disabled: {
-          opacity: 1;
-        }
-      }
       .link {
         text-decoration: underline;
         color: var(--medium-gray);
-      }
-      paper-input:not([readonly]) {
-        width: 60%;
       }
     </style>
     <div class="container">
@@ -165,12 +100,12 @@
             <h3>[[localize('settings-server-info')]]</h3>
             <paper-input id="serverNameInput" class="server-name" value="{{name}}" label="[[localize('settings-server-name')]]" always-float-label maxlength="100" on-keydown="_handleNameInputKeyDown" on-blur="_handleNameInputBlur"></paper-input>
             <p class="detail">[[localize('settings-server-rename')]]</p>
-            <div id="portForNewAccessKeysContainer">
-              <paper-input id="keysPortInput" readonly$="[[!isAccessKeyPortEditable]]" allowed-pattern="[0-9]{1,5}" value="[[serverPortForNewAccessKeys]]" label="[[localize('settings-access-key-port')]]" maxlength="5" hidden$="[[!serverPortForNewAccessKeys]]" on-tap="setKeysPortEditing" on-keyup="_handleKeysPortInputKeyUp" always-float-label maxlength="100"></paper-input>
-              <paper-button id="keysPortCancelButton" hidden$="[[!showKeysPortButtons]]" disabled$="[[!enableKeysPortButtons]]" on-tap="cancelKeysPortEdit">[[localize('cancel')]]</paper-button>
-              <paper-button id="keysPortSaveButton" hidden$="[[!showKeysPortButtons]]" disabled$="[[!enableKeysPortButtons]]" on-tap="saveKeysPort">[[localize('save')]]</paper-button>
-            </div>
-            <paper-input readonly value="[[serverHostname]]" label="[[localize('settings-server-hostname')]]" hidden$="[[!serverHostname]]" always-float-label maxlength="100"></paper-input>
+            <outline-validated-input
+              editable="[[isAccessKeyPortEditable]]" visible="[[serverPortForNewAccessKeys]]" label="[[localize('settings-access-key-port')]]" allowed-pattern="[0-9]{1,5}" max-length="5" value="[[serverPortForNewAccessKeys]]" client-side-validator="[[_validatePort]]" event="ChangePortForNewAccessKeysRequested" localize="[[localize]]"
+            ></outline-validated-input>
+            <outline-validated-input
+              editable="[[isHostnameEditable]]" visible="[[serverHostname]]" label="[[localize('settings-server-hostname')]]" max-length="253" value="[[serverHostname]]" event="ChangeHostnameForAccessKeysRequested" localize="[[localize]]"
+            ></outline-validated-input>
             <paper-input readonly value="[[serverManagementApiUrl]]" label="[[localize('settings-server-api-url')]]" hidden$="[[!serverManagementApiUrl]]" always-float-label maxlength="100"></paper-input>
             <paper-input readonly value="[[serverCreationDate]]" label="[[localize('settings-server-creation')]]" hidden$="[[!serverCreationDate]]" always-float-label maxlength="100"></paper-input>
             <paper-input readonly value="[[serverId]]" label="[[localize('settings-server-id')]]" hidden$="[[!serverId]]" always-float-label maxlength="100"></paper-input>
@@ -203,6 +138,7 @@
         serverManagementApiUrl: {type: String, value: null},
         serverPortForNewAccessKeys: {type: Number, value: null},
         isAccessKeyPortEditable: {type: Boolean, value: false},
+        isHostnameEditable: {type: Boolean, value: true},
         serverCreationDate: {type: String, value: null},
         serverLocation: {type: String, value: null},
         serverMonthlyCost: {type: String, value: null},
@@ -247,71 +183,11 @@
           this.fire(metricsSignal);
         }
       },
-      setKeysPortEditing: function() {
-        if (!this.isAccessKeyPortEditable) { 
-          return;
-        }
-        this.showKeysPortButtons = true;
-        const invalid = this.$.keysPortInput.invalid;
-        this.$.keysPortSaveButton.disabled = invalid;
-        this.$.keysPortCancelButton.disabled = false;
-      },
-      setKeysPortSaved: function() {
-        this.serverPortForNewAccessKeys = Number(this.$.keysPortInput.value);
-        this.showKeysPortButtons = false;
-        this.$.keysPortInput.readonly = false;
-      },
-      setKeysPortErrorState: function(message) {
-        const input = this.$.keysPortInput;
-        this.enableKeysPortButtons = true; 
-        input.invalid = true;
-        input.errorMessage = message;
-        input.readonly = false;
-        input.focus();
-      },
-      saveKeysPort: function() {
-        const input = this.$.keysPortInput;
-        if (Number(input.value) === this.serverPortForNewAccessKeys) {
-          this.cancelKeysPortEdit();
-          return;
-        };
-        this.enableKeysPortButtons = false;
-        input.readonly = true;
-        input.invalid = false;
-        this.fire('ChangePortForNewAccessKeysRequested', {
-          port: Number(this.$.keysPortInput.value), 
-          serverSettings: this
-        });
-      },
-      cancelKeysPortEdit: function() {
-        this.$.keysPortInput.value = this.serverPortForNewAccessKeys;
-        this.$.keysPortInput.invalid = false;
-        this.showKeysPortButtons = false;
-      },
-      _handleKeysPortInputKeyUp: function(e) {
-        let input = this.$.keysPortInput;
-        const badInputMessage = this.localize('error-keys-port-bad-input');
-        if (e.key === 'Escape') {
-          this.cancelKeysPortEdit();
-          input.blur();
-          return; 
-        } else if (e.key === 'Enter') {
-          if (!input.invalid) {  
-            this.saveKeysPort();
-            input.blur();
-          }
-          return;
-        }
-        let port = Number(input.value);
-        if (Number.isNaN(port) || (port < 1 || port > 65535) || !Number.isInteger(port)) {
-          input.invalid = true;
-          this.$.keysPortSaveButton.disabled = true;
-          input.errorMessage = badInputMessage;
-        } else {
-          input.invalid = false;
-          this.$.keysPortSaveButton.disabled = false;
-        }
-      }
+      _validatePort: function(value) {
+        const port = Number(value);
+        const valid = !Number.isNaN(port) && port >= 1 && port <= 65535 && Number.isInteger(port);
+        return valid ? "" : this.localize("error-keys-port-bad-input");
+      }  
     });
   </script>
 </dom-module>
