--- a/src/server_manager/ui_components/outline-server-settings-styles.html
+++ b/src/server_manager/ui_components/outline-server-settings-styles.html
@@ -14,58 +14,56 @@
   limitations under the License.
 -->
 
-<!-- outline-server-settings-styles 
+<!-- outline-server-settings-styles
     This file holds common styles for outline-server-settings and outline-validated-input
  -->
 
  <dom-module id='outline-server-settings-styles'>
-     <template>
-         <style>
-            /* Skip processing these with postcss-rtl as it incorrectly parses the border-color
-                in the paper-input-container-underline-focus mixin. 
-                https://github.com/vkalinichev/postcss-rtl/issues/50 */
-            /* rtl:begin:ignore */
-            paper-input {
-                /* Removes extra padding added by children of paper-input */
-                margin-top: -8px;
-                /* Create space for error messages */
-                margin-bottom: 14px;
-                --paper-input-container-label-focus: {
-                    color: var(--primary-green);
-                };
-                --paper-input-container-underline-focus: {
-                    border-color: var(--primary-green);
-                };
-                --paper-input-container-label: {
-                    font-size: 14px;
-                    line-height: 22px;
-                };
-                --paper-input-container-color: var(--medium-gray);
-                --paper-input-container-input: {
-                    color: #fff;
-                };
-                --paper-input-container-invalid-color: #f28b82;
-            }
-            /* rtl:end:ignore */
-            
-            paper-input[readonly] {
-                --paper-input-container-underline: {
-                    display: none;
-                };
-                --paper-input-container-underline-focus: {
-                    display: none;
-                };
-                --paper-input-container-underline-disabled: {
-                    display: none;
-                };
-                --paper-input-container-disabled: {
-                    opacity: 1;
-                }
-            }
-            
-            paper-input:not([readonly]) {
-                width: 60%;
-            }
-         </style>
-     </template>
+  <template>
+    <style>
+      /* Skip processing these with postcss-rtl as it incorrectly parses the border-color
+          in the paper-input-container-underline-focus mixin.
+          https://github.com/vkalinichev/postcss-rtl/issues/50 */
+      /* rtl:begin:ignore */
+      paper-input {
+        /* Matches the max width of outline-validated-input  */
+        max-width: 545px;
+        /* Removes extra padding added by children of paper-input */
+        margin-top: -8px;
+        /* Create space for error messages */
+        margin-bottom: 14px;
+        --paper-input-container-label-focus: {
+          color: var(--primary-green);
+        };
+        --paper-input-container-underline-focus: {
+          border-color: var(--primary-green);
+        };
+        --paper-input-container-label: {
+          font-size: 14px;
+          line-height: 22px;
+        };
+        --paper-input-container-color: var(--medium-gray);
+        --paper-input-container-input: {
+          color: #fff;
+        };
+        --paper-input-container-invalid-color: #f28b82;
+      }
+      /* rtl:end:ignore */
+
+      paper-input[readonly] {
+        --paper-input-container-underline: {
+          display: none;
+        };
+        --paper-input-container-underline-focus: {
+          display: none;
+        };
+        --paper-input-container-underline-disabled: {
+          display: none;
+        };
+        --paper-input-container-disabled: {
+          opacity: 1;
+        }
+      }
+    </style>
+  </template>
  </dom-module>
